Minor text corrections

--- a/learning/mnist_efficientnet_baseline.ipynb
+++ b/learning/mnist_efficientnet_baseline.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "PyTorch is a brilliant framework for crafting neural networks, especially when you’re tackling unstructured data like images. But if you’re not wrestling with PyTorch or image classification daily, getting started can feel a little sluggish. Why? PyTorch asks for some boilerplate code to set the stage. Once that’s sorted, though, the playground opens up — you’re free to experiment and dig into the good stuff.\n",
     "\n",
-    "In this notebook, I’ll guide you through a quick, no-fuss approach to building a greyscale multi-class image classifier — a classic in beginner tutorials and machine learning competitions. We’ll create a solid baseline model that skips the cutting-edge frills but delivers what you’d expect from a decent classifier. That said, I’ll toss in a couple of fresher tricks like training-time validation and a brute-force accuracy boost without diving into ensemble madness. These can be gold when you’re stuck with a small dataset and chasing leaderboard glory (top spot, anyone?).\n",
+    "In this notebook, I’ll guide you through a quick, no-fuss approach to building a greyscale multi-class image classifier — a classic in beginner tutorials and machine learning competitions. We’ll create a solid baseline model that skips the cutting-edge frills but delivers what you’d expect from a decent classifier. That said, I’ll toss in a couple of fresher tricks like training-time validation augmentation and a brute-force accuracy boost via Test-Time Augmentation (TTA) without diving into ensemble madness. These can be gold when you’re stuck with a small dataset and chasing leaderboard glory (top spot, anyone?).\n",
     "\n",
     "Instead of designing a model from the ground up, we’ll borrow the smallest EfficientNet — a lean, mean Artificial Neural Network (ANN). Reusing established architectures is practically the golden rule now, especially for standard tasks like this. We won’t grab a pretrained version, but we’ll adapt its structure: swapping the first convolution block to handle greyscale images (not RGB) and tweaking the decision head to match our number of classes. From there, it’s standard training — with a clever twist for validation.\n",
     "\n",
@@ -19,7 +19,7 @@
     "\n",
     "When data’s scarce — or even when it’s abundant — training-time augmentation is a go-to move to churn out endless variations and keep overfitting at bay. We’ll apply this to training *and* validation. Yep, instead of a fixed validation set, we’ll generate unlimited augmented versions. No model can bluff its way to high accuracy when the target keeps morphing — it has to truly grasp the images’ core to survive. It’s a slightly quirky method, but it’s like a bootcamp for your model. The hope? If it shines through this chaos, it’ll breeze through plain validation images too.\n",
     "\n",
-    "We’ll stretch this idea to inference with Test-Time Augmentation (TTA). Rather than predicting one raw image, we’ll augment it into multiple versions, predict each, and let the model vote on the final call. It’s a neat way to nudge up performance — like a group huddle before the answer. Plus, in a real-world setup (especially a rough one), it might just trip up any sneaky adversaries. That’s a story for another day, though!\n",
+    "We’ll stretch this idea to inference with Test-Time Augmentation. Rather than predicting one raw image, we’ll augment it into multiple versions, predict each, and let the model vote on the final call. It’s a neat way to nudge up performance — like a group huddle before the answer. Plus, in a real-world setup (especially a rough one), it might just trip up any sneaky adversaries. That’s a story for another day, though!\n",
     "\n",
     "Enough talk—let’s dive in and get our hands dirty!"
    ]
@@ -39,7 +39,7 @@
     "\n",
     "The core of it all is `EfficientNetClassifier`, which provides a clean `fit-predict` framework for training and inference. Its `fit` method comes with some handy features: validation against your data, early stopping (if no improvement shows after *patience* epochs, it halts), and a rollback to the best model if training stops. You can also opt to augment the validation set during training. This makes it a tougher test, offering a more guarded performance estimate—less rosy, more grounded, so the model proves itself on the plain data that actually counts.\n",
     "\n",
-    "The `predict` method keeps things simple but adds a twist with Test-Time Augmentation (TTA). You can stick with the same augmentations used during training or swap in a new set, perhaps better matched to what you’d expect from out-of-sample data. Give it a go to see if it nudges the results up a bit—could be worth the effort.\n",
+    "The `predict` method keeps things simple but adds a twist with TTA. You can stick with the same augmentations used during training or swap in a new set, perhaps better matched to what you’d expect from out-of-sample data. Give it a go to see if it nudges the results up a bit—could be worth the effort.\n",
     "\n",
     "Right then, let’s move to the code and get this classifier underway."
    ]
@@ -759,7 +759,7 @@
    "source": [
     "## 3.3 Fitting the Classifier\n",
     "\n",
-    "Now, let’s step into the meat of it: defining our model and getting straight to fitting it. A word of caution—this will take a while, so you might want to fetch a coffee, tidy your desk, give the cat a scratch, or find something marginally more rewarding than watching a progress bar inch along. It’s not quick, that’s for certain. Training will stop either after 100 epochs or earlier if early stopping steps in. Since we’re using validation-set augmentation—with fresh variations conjured up each time an image is pulled from the validation pool—hitting early stopping means the model’s well and truly spent. It can’t wring any more wisdom from that ever-changing validation data.\n",
+    "Now, let’s step into the meat of it: defining our model and getting straight to fitting it. A word of caution—this will take a while, so you might want to fetch a coffee, tidy your desk, give the cat a scratch, or find something marginally more rewarding than watching a progress bar inch along. It’s not quick, that’s for certain. Training will stop either after 100 epochs or earlier if early stopping steps in. Since we’re using validation-set augmentation—with fresh variations conjured up each time an image is pulled from the validation pool—hitting early stopping means the model is fitted well. It can’t wring any more wisdom from that ever-changing training data.\n",
     "\n",
     "A few notes on setting up the model. Though it’s optional, it’s well worth supplying the mean and standard deviation of the training data distribution. This helps the model normalise the data properly behind the scenes, as we’ve done below. We’ll also track accuracy, so if you stick around—rather than drifting off to more compelling distractions—you’ll get periodic updates to mull over. And we’re leaning on the CUDA backend; without it, we’d be twiddling our thumbs until tomorrow, or perhaps the day after."
    ]
